Started drawing search page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,9 @@
   background-color: #0e1271;
   border-color: #0e1271;
 }
+
+.btn-primary {
+  color: #fff;
+  background-color: #0e1271;
+  border-color: #0e1271;
+}
